objects/AI_Agent_Conversation__c.object
<CustomObject>
    <description>Demo object for the AI Agents demo component, indicating an AI Agent conversation, resulting in a row in the list on the component.</description>
    <fields>
        <fullName>AI_Agent_Name__c</fullName>
        <formula>AI_Agent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AI Agent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AI_Agent__c</fullName>
        <description>AI Agent that this conversation relates to</description>
        <label>AI Agent</label>
        <referenceTo>AI_Agent__c</referenceTo>
        <relationshipLabel>AI Agent Conversations</relationshipLabel>
        <relationshipName>AI_Agent_Conversations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <description>Name of the Contact conversing with the AI Agent</description>
        <label>Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conversation_Start_Date__c</fullName>
        <description>Time since UNIX - calculated using start seconds to display on list</description>
        <formula>FROMUNIXTIME( Conversation_Start_Seconds__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversation Start Date from UNIX</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Conversation_Start_Seconds__c</fullName>
        <defaultValue>60</defaultValue>
        <description>How many seconds the conversation has been going on at page load. Page will then start counting up.</description>
        <label>Conversation Start Seconds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conversation_Start__c</fullName>
        <description>Time of first message</description>
        <label>Conversation Start</label>
        <summarizedField>AI_Agent_Conversation_Entry__c.Entry_Time__c</summarizedField>
        <summaryForeignKey>AI_Agent_Conversation_Entry__c.AI_Agent_Conversation__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Conversation_Summary_Issue__c</fullName>
        <description>Issue section of Conversation Summary</description>
        <label>Conversation Summary Issue</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Conversation_Summary__c</fullName>
        <description>Shown in Conversation Summary component when monitoring the conversation</description>
        <label>Conversation Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Flag_Reason__c</fullName>
        <description>Reason the flag was raised</description>
        <label>Flag Reason</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Newest_Message_Date__c</fullName>
        <description>Time of the most recent message</description>
        <label>Newest Message Date</label>
        <summarizedField>AI_Agent_Conversation_Entry__c.Entry_Time__c</summarizedField>
        <summaryFilterItems>
            <field>AI_Agent_Conversation_Entry__c.IsDemoResponse__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>AI_Agent_Conversation_Entry__c.AI_Agent_Conversation__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <description>Shown in the Summary column - should be a a series of values separate by a pipe |
e.g. Subject of the conversation | High | Contact Name</description>
        <inlineHelpText>Shown in the Summary column - should be a a series of values separate by a pipe |
e.g. Subject of the conversation | High | Contact Name</inlineHelpText>
        <label>Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isHidden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to &apos;remove&apos; an item from the display without actually deleting it.</description>
        <inlineHelpText>Do not set - set in memory by demo component</inlineHelpText>
        <label>isHidden</label>
        <type>Checkbox</type>
    </fields>
    <label>AI Agent Conversation</label>
    <nameField>
        <displayFormat>AIConv-{0000}</displayFormat>
        <label>Agent Conversation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Agent Conversations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>